// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DiscountPopover/> render() should render with value 1`] = `
<div>
  <button
    class="button btn btn-link"
    id="discount-popover"
    tabindex="0"
    type="button"
  >
    <strong>
      Add discount
    </strong>
  </button>
  <span
    class="title"
  >
    foo
  </span>
  <div>
    <form
      class=""
    >
      <div
        class="pt-3 popover-body"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="discount-value"
          >
            Discount this 
            order
             by
          </label>
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <button
                class="btn btn-secondary"
                tabindex="0"
                type="button"
              >
                $
              </button>
            </div>
            <div
              class="input-group-prepend"
            >
              <button
                class="btn btn-secondary"
                tabindex="0"
                type="button"
              >
                %
              </button>
            </div>
            <div
              class="container amountInput"
            >
              <span
                class="wrapper group horizontal"
              >
                <span
                  class="prefix"
                >
                  $
                </span>
                <input
                  class="input"
                  id="discount-value"
                  max="10"
                  min="0"
                  required=""
                  step="0.01"
                  type="number"
                  value="5.99"
                />
                <span
                  class="controls group vertical"
                >
                  <button
                    aria-disabled="false"
                    class="ui-button-wrapper-a432 button wrapper small ui-button-fill-a432 ui-button-secondary-a432 ui-button-small-a432"
                    type="button"
                  >
                    <span
                      class="ui-button-content-a432"
                    >
                      <i
                        class="material-icons icon"
                      >
                        arrow_drop_up
                      </i>
                    </span>
                  </button>
                  <button
                    aria-disabled="false"
                    class="ui-button-wrapper-a432 button wrapper small ui-button-fill-a432 ui-button-secondary-a432 ui-button-small-a432"
                    type="button"
                  >
                    <span
                      class="ui-button-content-a432"
                    >
                      <i
                        class="material-icons icon"
                      >
                        arrow_drop_down
                      </i>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class=""
            for="title"
          >
            Reason
          </label>
          <input
            autocomplete="off"
            class="titleInput form-control"
            id="title"
            placeholder="Damaged item, loyalty discount"
            type="text"
            value="foo"
          />
        </div>
      </div>
      <hr
        class="m-0"
      />
      <div
        class="d-flex popover-body"
      >
        <button
          class="btn btn-danger"
          tabindex="0"
          type="button"
        >
          Remove
        </button>
        <button
          class="apply btn btn-primary"
          tabindex="0"
          type="submit"
        >
          Apply
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<DiscountPopover/> render() should render without value 1`] = `
<div>
  <button
    class="button btn btn-link"
    id="discount-popover"
    tabindex="0"
    type="button"
  >
    <strong>
      Add discount
    </strong>
  </button>
  <div>
    <form
      class=""
    >
      <div
        class="pt-3 popover-body"
      >
        <div
          class="form-group"
        >
          <label
            class=""
            for="discount-value"
          >
            Discount this 
            order
             by
          </label>
          <div
            class="input-group"
          >
            <div
              class="input-group-prepend"
            >
              <button
                class="btn btn-secondary"
                tabindex="0"
                type="button"
              >
                $
              </button>
            </div>
            <div
              class="input-group-prepend"
            >
              <button
                class="btn btn-secondary"
                tabindex="0"
                type="button"
              >
                %
              </button>
            </div>
            <div
              class="container amountInput"
            >
              <span
                class="wrapper group horizontal"
              >
                <span
                  class="prefix"
                >
                  $
                </span>
                <input
                  class="input"
                  id="discount-value"
                  max="10"
                  min="0"
                  required=""
                  step="0.01"
                  type="number"
                  value="0.00"
                />
                <span
                  class="controls group vertical"
                >
                  <button
                    aria-disabled="false"
                    class="ui-button-wrapper-a432 button wrapper small ui-button-fill-a432 ui-button-secondary-a432 ui-button-small-a432"
                    type="button"
                  >
                    <span
                      class="ui-button-content-a432"
                    >
                      <i
                        class="material-icons icon"
                      >
                        arrow_drop_up
                      </i>
                    </span>
                  </button>
                  <button
                    aria-disabled="true"
                    class="ui-button-wrapper-a432 button wrapper small ui-button-fill-a432 ui-button-secondary-a432 ui-button-small-a432 ui-button-isdisabled-a432"
                    type="button"
                  >
                    <span
                      class="ui-button-content-a432"
                    >
                      <i
                        class="material-icons icon"
                      >
                        arrow_drop_down
                      </i>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class=""
            for="title"
          >
            Reason
          </label>
          <input
            autocomplete="off"
            class="titleInput form-control"
            id="title"
            placeholder="Damaged item, loyalty discount"
            type="text"
            value=""
          />
        </div>
      </div>
      <hr
        class="m-0"
      />
      <div
        class="d-flex popover-body"
      >
        <button
          class="btn btn-secondary"
          tabindex="0"
          type="button"
        >
          Close
        </button>
        <button
          class="apply btn btn-primary"
          tabindex="0"
          type="submit"
        >
          Apply
        </button>
      </div>
    </form>
  </div>
</div>
`;
